[package]
name = "wasm-eq-visualizer"
version = "0.1.0"
authors = ["AshishYUO <supersonic12910@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.70", features = [
    "CanvasRenderingContext2d",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "ImageData",
    "AudioWorkletProcessor",
    "MessagePort",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 's'
lto = true
